src/test/deca/context/valid/fields/selection_nested_three_levels.deca
// Description :
//    Sélection de champ imbriquée sur trois niveaux.
//
// Resultats :
//    OK

class C {
    int z;
}

class B {
    C c;
}

class A {
    B b;
}

{
    A a = new A();
    a.b = new B();
    a.b.c = new C();
    a.b.c.z = 10;
    println(a.b.c.z);
}

