src/test/deca/context/invalid/avecObjet/cast_invalid.deca
// Description:
//    Test de cast invalide
//
// Resultats:
//    Ligne 10 : Cast impossible de boolean vers int.

class A {}
class B {}

{
    int i = 1;
    boolean b = true;
    A a = new A();
    B unrelated = new B();
    
    i = (int)(b);
}
